Debugged and added equation fields

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body
         margin: 40px;
     }
 
-.head 
+#head 
     { 
         color: rgb(31, 31, 31);
         background-color: rgb(155, 155, 155);
