--- a/style.css
+++ b/style.css
@@ -15,6 +15,16 @@ body
         margin-bottom: 10px;
     }
 
+#firstNumber, #secontNumber
+    {
+        font-size: 90%;
+    }
+
+#ecuation
+    {
+        font-size: 80%;
+    }
+
 .button 
     {
         background-color: #444;
